-Tortumor and giant tortumor projectiles not dealing any damage to players
-Spooky mod's custom trees drawing horribly offset with retro and trippy lighting modes
-The eye valley biome chest dropping a monster chest when broken, and not its own item
-Catacomb enemies being able to spawn outside of the catacombs itself
-Enemies being able to spawn in the spooky forest and swampy cemetery while you are in a town
-Vanilla enemies sometimes spawning in any of spooky mod's biomes
-Rotten gourd armor set bonus not working
-Spooky mod whips being unable to get certain melee weapon reforgments, and being strangely offset from the player's hand when used
-Gargoyle scepter still being usable with left click if grug is already summoned
-Spooky mod's underground backgrounds breaking (this was due to a tmodloader bug that got fixed in the 1.4.4 stable release)
-Seer and living seer consuming an arrow but not shooting a projectile on the first use
-Harvester's scythe, flesh mincer, and living flesh mincer knocking enemies toward you instead of away from you
-Valley of eyes enemies dropping living fire blocks, hel-fire, and cascade
-Spooky mod's heavy melee weapons being able to hurt town npcs
-Snotty schnoz allowing you to fire boogers from whips, summon weapons, and items that do not shoot projectiles
-Various issue with holdout items, such as them being incorrectly offset from the player's hand when on mounts
-Various armor sets and accessories that increase summon damage not increasing whip damage
-Gore staff tortumor minion targetting friendly critters
-Moldy chunks stacking to 999 and not 9999


Fixed all of the following multiplayer issues:

-Rot gourd not spawning correctly
-Spooky spirit vanishing when hit
-Orro-boro spawning with no segments and vanishing when hit (Hopefully)
-Big bone straight up not working in multiplayer (Hopefully)
-Little bone and little eye not being woken up properly when interacted with

