@@ -1,10 +1,7 @@
-After all the content in the update is done, all multiplayer needs to be fixed the best we can
-
-
 Known issues:
 
 -Eye valley variants of the dreadnautilus and blood squid are very buggy, seemds to be due to save positions being sent and recieved
--Orroboro spawns from the egg as a head only, needs to have a custom packet
 -Orro and boro segments are also kind of jittery, and boro has teleported when using its flame thrower attack
--Big bone does not spawn at all and vanishes, needs to be looked into as soon as possible
--Fix all instances of Projectile.NewProjectile spawning duplicate projectiles in every single case where this happens (especially bosses)
+-Egg event enemies randomly deciding to vanish on hit, but its inconsistent
+-Vesicator biomass spawning two enemies at once
+-Big bone still vanishes on hit
